unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Hay_NC_de_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Hay_NC_de_Bonificacion__c</fullName>
    <formula>IF(Sumatoria_Notas_Credito_Bonificacion__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hay NC de Bonificación?</label>
    <type>Checkbox</type>
</CustomField>