unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Importe_Avaluo_Formula__c.field-meta.xml
<CustomField>
    <fullName>Importe_Avaluo_Formula__c</fullName>
    <formula>Titulacion__r.Importe_de_Aval_o__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Avalúo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>