unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Importe_Avaluo_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Importe_Avaluo_PlainField__c</fullName>
    <label>Importe Avalúo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>