unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Importe_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Importe_Escritura__c</fullName>
    <formula>Titulacion__r.Importe_de_la_Escritura__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe de la Escritura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>