unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Importe_Escritura_TXT__c.field-meta.xml
<CustomField>
    <fullName>Importe_Escritura_TXT__c</fullName>
    <formula>TEXT(ROUND(Importe_Escritura__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Escritura TXT</label>
    <type>Text</type>
</CustomField>