unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Importe_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Importe_Financiamiento__c</fullName>
    <label>Importe Financiamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>