unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Importe_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Importe_Pagos__c</fullName>
    <label>Importe Pagos</label>
    <summarizedField>Pago__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Pago__c.Clasificacion__c</field>
        <operation>notEqual</operation>
        <value>Enganche</value>
    </summaryFilterItems>
    <summaryForeignKey>Pago__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>