unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Importe_Porcentaje_Incobrable_Postventa__c.field-meta.xml
<CustomField>
    <fullName>Importe_Porcentaje_Incobrable_Postventa__c</fullName>
    <formula>(Sumatoria_Pagares_Postventa__c - Sumatoria_Notas_Credito_Bonificacion__c) * Porcentaje_Incobrable_Postventa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe del % Incobrable Postventa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>