unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Importe_Sobreprecio__c.field-meta.xml
<CustomField>
    <fullName>Importe_Sobreprecio__c</fullName>
    <formula>Precio_Vivienda_Sobreprecio__c - 	Precio_Comercial_Sin_Mts2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Sobreprecio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>