unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Instalaciones_Formula__c.field-meta.xml
<CustomField>
    <fullName>Instalaciones_Formula__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Instalaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instalaciones</label>
    <type>Checkbox</type>
</CustomField>