unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Instalaciones_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Instalaciones_PlainField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instalaciones</label>
    <type>Checkbox</type>
</CustomField>