unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Lado_Sol_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lado_Sol_Formula__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Lado_Sol__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lado Sol</label>
    <type>Checkbox</type>
</CustomField>