unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Lado_Sol_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Lado_Sol_PlainField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lado Sol</label>
    <type>Checkbox</type>
</CustomField>