unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Lado_Sombra_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Lado_Sombra_PlainField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lado Sombra</label>
    <type>Checkbox</type>
</CustomField>