unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Lista_de_Precios_de_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precios_de_Bonificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de de Bonificación</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Cobranza Comercial (Lista de Precios de Bonificación)</relationshipLabel>
    <relationshipName>Cobranza_Comercial2</relationshipName>
    <type>Lookup</type>
</CustomField>