unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Lista_de_Precios_Financiamien_Reciente__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precios_Financiamien_Reciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Financiamiento - Reciente</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Cobranza Comercial(Lista de Precios Financiamien - Reciente)</relationshipLabel>
    <relationshipName>Cobranza_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>