unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Lista_de_Promocion_de_Precio__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Promocion_de_Precio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Promoción de Precio</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Cobranza Comercial (Lista de Promoción de Precio)</relationshipLabel>
    <relationshipName>Cobranza_Comercial1</relationshipName>
    <type>Lookup</type>
</CustomField>