unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Lote__c</formula>
    <label>Lote</label>
    <type>Text</type>
</CustomField>