unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Lote_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Lote_PlainField__c</fullName>
    <label>Lote</label>
    <length>20</length>
    <type>Text</type>
</CustomField>