unpackaged/main/default/objects/Cobranza_Comercial__c/fields/LP_Financiamiento_Aplicada__c.field-meta.xml
<CustomField>
    <fullName>LP_Financiamiento_Aplicada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LP Financiamiento Aplicada</label>
    <type>Checkbox</type>
</CustomField>