unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Manzana__c.field-meta.xml
<CustomField>
    <fullName>Manzana__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Manzana__c</formula>
    <label>Manzana</label>
    <type>Text</type>
</CustomField>