unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Manzana_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Manzana_PlainField__c</fullName>
    <label>Manzana</label>
    <length>20</length>
    <type>Text</type>
</CustomField>