unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Mensualidad__c.field-meta.xml
<CustomField>
    <fullName>Mensualidad__c</fullName>
    <formula>IF( Plazo__c &lt;= 0, 0,
    IF( Financiamiento_Real_Sin_Pagare_Post__c &gt; 0, 
        Financiamiento_Real_Sin_Pagare_Post__c / Plazo__c,
			         IF(Suma_Total_Pagar_s_Post_Venta__c &gt; 0, 
               Suma_Total_Pagar_s_Post_Venta__c/Plazo__c, 0
							        )
			    )
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mensualidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>