unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Mensualidad_del_Cr_dito_Postventa__c.field-meta.xml
<CustomField>
    <fullName>Mensualidad_del_Cr_dito_Postventa__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Mensualidad del Crédito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>