unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Monto_Descuadre_VO__c.field-meta.xml
<CustomField>
    <fullName>Monto_Descuadre_VO__c</fullName>
    <formula>Valor_Operacion__c - Suma_Pagares__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto de Descuadre VO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>