unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Monto_Fin_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Fin_Autorizado__c</fullName>
    <formula>Lista_de_Precios_Financiamien_Reciente__r.Importe_Financiamiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Financiamiento Autorizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>