unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Monto_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Monto_Financiamiento__c</fullName>
    <formula>IF( Sumatoria_Pagares_Postventa__c  -  Sumatoria_Notas_Credito_Bonificacion__c  &gt;= 0, 
			 Sumatoria_Pagares_Postventa__c  -  Sumatoria_Notas_Credito_Bonificacion__c,
			 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Financiamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>