unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Monto_Financiamiento_Real__c.field-meta.xml
<CustomField>
    <fullName>Monto_Financiamiento_Real__c</fullName>
    <formula>Diferencia_a_Pagar__c - Sumatoria_Notas_Credito_Bonificacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Financiamiento Real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>