unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Nombre_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Cliente__c</fullName>
    <formula>Cliente__r.Nombre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Cliente</label>
    <type>Text</type>
</CustomField>