unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Nombre_Promocion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Promocion__c</fullName>
    <label>Tipo de Lista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>