unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Notaria__c.field-meta.xml
<CustomField>
    <fullName>Notaria__c</fullName>
    <formula>Titulacion__r.Notaria__r.Name</formula>
    <label>Notaría</label>
    <type>Text</type>
</CustomField>