unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Notario__c.field-meta.xml
<CustomField>
    <fullName>Notario__c</fullName>
    <formula>Titulacion__r.Notario__c</formula>
    <label>Notario</label>
    <type>Text</type>
</CustomField>