unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Num_Interior__c.field-meta.xml
<CustomField>
    <fullName>Num_Interior__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Num_Interior__c</formula>
    <label>Núm. Interior</label>
    <type>Text</type>
</CustomField>