unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Num_Interior_Plain__c.field-meta.xml
<CustomField>
    <fullName>Num_Interior_Plain__c</fullName>
    <label>Num Interior</label>
    <length>20</length>
    <type>Text</type>
</CustomField>