unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Num_Interno_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Num_Interno_PlainField__c</fullName>
    <label>Num Interno</label>
    <length>100</length>
    <type>Text</type>
</CustomField>