unpackaged/main/default/objects/Cobranza_Comercial__c/fields/NUM_PROC_VENTA__c.field-meta.xml
<CustomField>
    <fullName>NUM_PROC_VENTA__c</fullName>
    <formula>Proceso_Venta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NUM PROC VENTA</label>
    <type>Text</type>
</CustomField>