unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Numero_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Credito__c</fullName>
    <formula>Titulacion__r.Numero_de_Credito__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Crédito</label>
    <type>Text</type>
</CustomField>