unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Numero_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Numero_Escritura__c</fullName>
    <formula>TEXT(Titulacion__r.Numero_de_Escritura__c)</formula>
    <label>Número de Escritura</label>
    <type>Text</type>
</CustomField>