unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Numero_Interior_Formula__c.field-meta.xml
<CustomField>
    <fullName>Numero_Interior_Formula__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Num_Interior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número Interior</label>
    <type>Text</type>
</CustomField>