unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Numero_Interno__c.field-meta.xml
<CustomField>
    <fullName>Numero_Interno__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Num_Interno__c</formula>
    <label>Número Interno</label>
    <type>Text</type>
</CustomField>