unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Obra_Fisico_Formula__c.field-meta.xml
<CustomField>
    <fullName>Obra_Fisico_Formula__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Porcentaje_Obra_Fisico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Obra Físico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>