unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Obra_Fisico_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Obra_Fisico_PlainField__c</fullName>
    <label>% Obra Físico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>