unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso de Venta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cobranza Comercial (Proceso de Venta)</relationshipLabel>
    <relationshipName>Plan_de_Venta_CC</relationshipName>
    <type>Lookup</type>
</CustomField>