unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Otra_Relacion_Cobranza_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Otra_Relacion_Cobranza_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Otra Relación Cobranza Comercial</label>
    <referenceTo>Otra_Relacion_Cobranza_Comercial__c</referenceTo>
    <relationshipLabel>Cobranza Comercial</relationshipLabel>
    <relationshipName>Cobranza_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>