unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Otros_Gastos__c.field-meta.xml
<CustomField>
    <fullName>Otros_Gastos__c</fullName>
    <label>Otros Gastos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>