unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Otros_Gastos_Formula__c.field-meta.xml
<CustomField>
    <fullName>Otros_Gastos_Formula__c</fullName>
    <formula>Plan_Venta__r.Otros_Gastos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Otros Gastos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>