unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Pagare_financiera_Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Pagare_financiera_Cantidad__c</fullName>
    <label>Pagaré financiera Cantidad</label>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ FINANCIERA</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>