unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Pagare_Subsidio_Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Pagare_Subsidio_Cantidad__c</fullName>
    <label>Pagaré Subsidio (Cantidad)</label>
    <summaryFilterItems>
        <field>Documento__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Pagaré</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ SUBSIDIO</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>