unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Pagares_Financiera_Cerrados__c.field-meta.xml
<CustomField>
    <fullName>Pagares_Financiera_Cerrados__c</fullName>
    <label>Pagares Financiera Cerrados</label>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ FINANCIERA</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Documento__c.Estatus__c</field>
        <operation>equals</operation>
        <value>CERRADO</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>