unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Paquetes__c.field-meta.xml
<CustomField>
    <fullName>Paquetes__c</fullName>
    <label>Paquetes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>