unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Parametro_para_el_Calculo_de_Sobreprecio__c.field-meta.xml
<CustomField>
    <fullName>Parametro_para_el_Calculo_de_Sobreprecio__c</fullName>
    <formula>TEXT( Fraccionamiento__r.Parametro_para_el_Calculo_de_Sobreprecio__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parámetro para el Cálculo de Sobreprecio</label>
    <type>Text</type>
</CustomField>