unpackaged/main/default/objects/Cobranza_Comercial__c/fields/PDEV_ago__c.field-meta.xml
<CustomField>
    <fullName>PDEV_ago__c</fullName>
    <label>Pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>