unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Plan_de_Venta_Original__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta_Original__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de Venta Original</label>
    <referenceTo>Plan_de_Venta__c</referenceTo>
    <relationshipLabel>Cobranza Comercial (Plan de Venta Original)</relationshipLabel>
    <relationshipName>Cobranza_Comercial1</relationshipName>
    <type>Lookup</type>
</CustomField>