unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Plan_de_Venta_Re_estructura__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta_Re_estructura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de Venta Re-estructura</label>
    <referenceTo>Plan_de_Venta__c</referenceTo>
    <relationshipLabel>Cobranza Comercial (Plan de Venta Re-estructura)</relationshipLabel>
    <relationshipName>Cobranza_Comercial2</relationshipName>
    <type>Lookup</type>
</CustomField>