unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Plan_Venta__c.field-meta.xml
<CustomField>
    <fullName>Plan_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de Venta (Actual)</label>
    <referenceTo>Plan_de_Venta__c</referenceTo>
    <relationshipLabel>Cobranza Comercial</relationshipLabel>
    <relationshipName>Cobranza_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>