unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Plazo__c.field-meta.xml
<CustomField>
    <fullName>Plazo__c</fullName>
    <label>Plazo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>