unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje__c</fullName>
    <defaultValue>0.3</defaultValue>
    <label>Porcentaje</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>