unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Porcentaje_a_Financiar__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_a_Financiar__c</fullName>
    <formula>IF( Valor_Operacion__c  &lt;= 0, 0,
			 IF( (Financiamiento_Real_Sin_Pagare_Post__c / Valor_Operacion__c) &lt;= 0, 0,
							 (Financiamiento_Real_Sin_Pagare_Post__c / Valor_Operacion__c)
							)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje a Financiar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>