unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Porcentaje_Fin_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Fin_Autorizado__c</fullName>
    <formula>Lista_de_Precios_Financiamien_Reciente__r.Porcentaje_Fianciamiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje Financiamiento Autorizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>