unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Porcentaje_Incobrable_Postventa__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Incobrable_Postventa__c</fullName>
    <formula>Fraccionamiento__r.Porcentaje_Incobrable_Postventa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Incobrable Postventa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>