unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Precio_Comercial_Sin_Mts2__c.field-meta.xml
<CustomField>
    <fullName>Precio_Comercial_Sin_Mts2__c</fullName>
    <formula>Importe_Escritura__c - (Sumatoria_Notas_Creditos__c - Otros_Gastos__c) - Promociones__c - Paquetes__c - Otros_Gastos__c - Importe_Porcentaje_Incobrable_Postventa__c - Total_Precio_Superficie_Excedente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Comercial sin mts2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>