unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Precio_Minimo__c.field-meta.xml
<CustomField>
    <fullName>Precio_Minimo__c</fullName>
    <formula>Lista_de_Precios_Financiamien_Reciente__r.Precio_Lista__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Mínimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>