unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Precio_Minimo_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_Minimo_de_Venta__c</fullName>
    <formula>Plan_Venta__r.Precio_Minimo_de_Venta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Mínimo de Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>