unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Precio_Vivienda_Sobreprecio__c.field-meta.xml
<CustomField>
    <fullName>Precio_Vivienda_Sobreprecio__c</fullName>
    <formula>CASE( Parametro_para_el_Calculo_de_Sobreprecio__c,
						&quot;Precio Presupuesto&quot;,  Vivienda__r.Precio_Presupuesto__c, 
						&quot;Precio Mínimo de Venta&quot;,Precio_Minimo_de_Venta__c,
						&quot;Precio Unitario&quot;, Plan_Venta__r.Precio_Base_Vivienda__c,
						&quot;Precio Minimo Solicitado&quot;, Precio_Minimo_Solicitado_Formula__c,
							0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Vivienda (Sobreprecio)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>