unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Proceso_Antilavado__c.field-meta.xml
<CustomField>
    <fullName>Proceso_Antilavado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proceso Bloqueado Ley Antilavado</label>
    <type>Checkbox</type>
</CustomField>