unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Proceso_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_Venta__c</fullName>
    <label>Proceso de Venta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cobranza Comercial</relationshipLabel>
    <relationshipName>Cobranza_Comercial</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>