unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Producto_Financiero__c.field-meta.xml
<CustomField>
    <fullName>Producto_Financiero__c</fullName>
    <formula>TEXT(Proceso_Venta__r.Producto_financiero__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto Financiero</label>
    <type>Text</type>
</CustomField>