unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Promo_Precio_Fecha_Fin__c.field-meta.xml
<CustomField>
    <fullName>Promo_Precio_Fecha_Fin__c</fullName>
    <label>Promo Precio Vigencia Hasta</label>
    <type>Date</type>
</CustomField>