unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Promo_Precio_Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Promo_Precio_Fecha_Inicio__c</fullName>
    <label>Promo Precio Vigencia Desde</label>
    <type>Date</type>
</CustomField>