unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Promociones__c.field-meta.xml
<CustomField>
    <fullName>Promociones__c</fullName>
    <label>Promociones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>