unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prototipo</label>
    <referenceTo>Prototipo__c</referenceTo>
    <relationshipLabel>Cobranza Comercial</relationshipLabel>
    <relationshipName>Cobranza_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>