unpackaged/main/default/objects/Cobranza_Comercial__c/fields/rea_Municipal_PlainField__c.field-meta.xml
<CustomField>
    <fullName>rea_Municipal_PlainField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Área Municipal</label>
    <type>Checkbox</type>
</CustomField>