unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Reembolso_por_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Reembolso_por_Escritura__c</fullName>
    <formula>1 &lt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reembolso por Escritura</label>
    <type>Checkbox</type>
</CustomField>