unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Reestructurado__c.field-meta.xml
<CustomField>
    <fullName>Reestructurado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirma que el registro de cobranza comercial a sido reestructurado</description>
    <label>Reestructurado</label>
    <type>Checkbox</type>
</CustomField>