unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Resultado_Simulaci_n__c.field-meta.xml
<CustomField>
    <fullName>Resultado_Simulaci_n__c</fullName>
    <formula>IF( Sueldo_Neto__c &gt; 0.00, 
    IF(   Capacidad_de_Deuda__c * (0.30)  &gt;= ( Mensualidad__c + Mensualidad_del_Cr_dito_Postventa__c ),
          &quot;Financiamiento Viable&quot;, 
          &quot;Financiamiento No Viable&quot;),
			 &quot;No se ha Realizado la Simulación&quot;
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resultado Simulación</label>
    <type>Text</type>
</CustomField>