unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Revision_APC__c.field-meta.xml
<CustomField>
    <fullName>Revision_APC__c</fullName>
    <formula>Proceso_Venta__r.Revision_APC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revisión APC</label>
    <type>Checkbox</type>
</CustomField>