unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Saldo_Devolucion__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Devolucion__c</fullName>
    <formula>Importe_Pagos__c - Suma_Total_de_Pagares__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Devolución</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>