unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Saldo_Total__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Total__c</fullName>
    <formula>Total_Facturas_Valor_Operaci_n__c -  Total_Pagado_por_Recibos__c -  Total_Pagado_por_NC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>