unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Se_Ejecuto_Validacion_Ley_Antilavado__c.field-meta.xml
<CustomField>
    <fullName>Se_Ejecuto_Validacion_Ley_Antilavado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Se Ejecuto Validación Ley Antilavado?</label>
    <type>Checkbox</type>
</CustomField>