unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Sobre_Avenida_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sobre_Avenida_Formula__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Frente_Parque__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sobre Avenida</label>
    <type>Checkbox</type>
</CustomField>