unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Sobre_Avenida_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Sobre_Avenida_PlainField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sobre Avenida</label>
    <type>Checkbox</type>
</CustomField>